--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Google</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#">Icon</a></li>
+                <li><a href="#">Photo</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
