--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-right-section">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#">Icon</a></li>
-                <li><a href="#">Photo</a></li>
+                <li class="menu-icon"><a href="#"></a></li>
+                <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/AAEL6sjhtDC0MZMW31m8Tx5iaVwCUxhqxSr8jrzwMpxmYg=s32-c-mo" alt=""></a></li>
             </ul>
         </nav>
     </header>
