--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
             </ul>
         </nav>
     </header>
-</body>
+    <main>
+        <section class="main-logo">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon"></span>
+                <input type="text" placeholder="Search in google or write a url">
+                <a class="micro-icon" href="#"></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div><button class="search">Google Search</button></div>
+            <div><button>I'm Feeling Lucky</button></div>
+        </section>
+    </main>
 </html>
