--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="main-input">
             <div class="main-input-container">
                 <span class="search-icon"></span>
-                <input type="text" placeholder="Search in google or write a url">
+                <input type="text" placeholder="Search in google or write an url">
                 <a class="micro-icon" href="#"></a>
             </div>
         </section>
