--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <header>
         <nav>
             <ul class="nav-right-section">
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Images</a></li>
-                <li class="menu-icon"><a href="#"></a></li>
+                <li class="gmail"><a href="#">Gmail</a></li>
+                <li class="img"><a href="#">Images</a></li>
+                <li class="menu-icon"><a href="#">
+                    <svg class='gb_0e' focusable='false' viewbox='0 0 24 24'><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path>
+                    </svg>
+                </a></li>
                 <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/AAEL6sjhtDC0MZMW31m8Tx5iaVwCUxhqxSr8jrzwMpxmYg=s32-c-mo" alt=""></a></li>
             </ul>
         </nav>
