--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="main-logo">
-            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
+            <img src="https://lh3.googleusercontent.com/iwebPyNu9wsmbsXxy_nc3r0xltzQ5IrPIDoRiobwHnEW-Vj9tDX0W1Awn2BzeEtBQFTzIW5qYD9P177PpfpFyKqt32zKfCJhwbxtVOWB" alt="">
         </section>
         <section class="main-input">
             <div class="main-input-container">
