--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     </main>
     <footer>
         <ul class="footer-left">
-           <li><a href="#">Advertising</a></li>
-           <li><a href="#">Business</a></li>
-           <li><a href="#">About</a></li>
-           <li><a href="#">How Search works</a></li> 
+           <li><a href="https://ads.google.com/intl/en_us/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1#!/">Advertising</a></li>
+           <li><a href="https://smallbusiness.withgoogle.com/intl/es-419_ar/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ww-ww-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u&c=AR#!/">Business</a></li>
+           <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a></li>
+           <li><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search works</a></li> 
         </ul>
         <ul class="footer-right">
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="https://policies.google.com/privacy?hl=en&fg=1">Privacy</a></li>
+            <li><a href="https://policies.google.com/terms?hl=en&fg=1">Terms</a></li>
+            <li><a href="https://www.google.com/preferences?hl=en&fg=1">Settings</a></li>
         </ul>
     </footer>
 </body>
